# agenda

./: PROMPT_SESION.md  README.md  idea_general_proyecto.md  pyproject.toml
src/: main.py
src/bot/: keyboards.py
src/bot/handlers/: contactos.py  crear_evento.py  editar_evento.py  eliminar_evento.py  natural.py  start.py  terminar_evento.py  ver_eventos.py
src/calendar_api/: __init__.py  async_wrapper.py  auth.py  client.py  colors.py  templates.py
src/core/: exceptions.py  logging_config.py  result.py
src/db/: cache.py  database.py  models.py  repository.py  schema.sql
tests/integration/: test_complete_event.py  test_create_event.py
tests/unit/: conftest.py  test_cache.py  test_calendar_client.py  test_client.py  test_colors.py  test_config.py  test_constants.py  test_exceptions.py  test_formatters.py  test_fuzzy.py  test_keyboards.py  test_middleware.py  test_models.py  test_orchestrator.py  test_parser.py  test_prompts.py  test_repository.py  test_result.py  test_schemas.py  test_templates.py
